--- a/main.html
+++ b/main.html
@@ -8,7 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <div class="main">
+            <p>This is a demo of model try to replicate 
+                this box model in Html and Css and tr
+                to pass all the test cases. 
+            </p>
+        </div>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
