--- a/main.html
+++ b/main.html
@@ -9,8 +9,10 @@
 <body>
 	<!-- the entire body must be written by student -->
     <div class="main">
-            <p>This is a demo of box model try to replicate <br> this box model in Html and Css and try <br> to pass all the test cases. 
-            </p>
+            <pre>This is a demo of box model try to replicate
+this box model in Html and Css and try
+to pass all the test cases. 
+            </pre>
         </div>
 	<script type="text/javascript" src="./script.js">
 </script>
